--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,14 @@
-ipykernel==5.5.3
-ipython==7.22.0
-jupyterlab==3.0.14
-notebook==6.3.0
-numpy==1.20.2
-pandas==1.2.4
-scikit-learn==0.24.1
+ipykernel
+ipython
+jupyterlab
+notebook
+numpy
+Orange3
+pandas
+PyQt5==5.15.4
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.9.0
+pyqtgraph==0.12.1
+PyQtWebEngine==5.15.4
+PyQtWebEngine-Qt5==5.15.2
+scikit-learn
